# basketball-scheduler

./: .dockerignore  .env.example  .gitignore  BACKUPS.md  CLAUDE.md  Dockerfile  PLAN.md  README.md  SPLIT_PLAN.md  analyze_grid_search.py  docker-compose.yml  grid_search_results_20250226_203259.json  grid_search_results_20250226_203529.json  grid_search_results_20250226_204018.json  grid_search_results_20250226_204018_corrected_summary.json  grid_search_results_20250226_204018_summary.json  grid_search_results_20250227_000253.json  grid_search_results_20250227_000253_summary.json  grid_search_results_20250227_001333.json  grid_search_results_20250227_001333_summary.json  manage.py  package-lock.json  package.json  pyproject.toml  saved_schedule.json  schedule.py  schedule_grid_search.py  schedule_new.py  schedule_old.py  schedule_teams.json  schedule_tests.py  stats.py  tests.py  utils.py  webpack-stats.json  webpack.config.js
assets/js/: schedule-embed.js
league_manager/: asgi.py  settings.py  urls.py  wsgi.py
lobster_migrate/: CLAUDE.md
lobster_migrate/2223/: import_2223_03.py
lobster_migrate/2324/: import_2324_01.py  import_2324_03.py
lobster_migrate/2425/: import_2425_01.py  import_2425_02.py  import_2425_03.py
saved_schedules/: 2425_s3_sameslots.json
scheduler/: admin.py  auth_views.py  decorators.py  middleware.py  models.py  services.py  test_calendar_export.py  tests.py  urls.py  views.py
scheduler/migrations/: 0001_initial.py  0002_alter_teamorganization_name.py  0002_remove_season_end_date_remove_season_start_date.py  0003_season_is_deleted.py  (+16 more)
(+90 files in other folders)
